--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-/src/environments/environment.prod.ts
-/src/environments/environment.ts
+/environment.prod.ts
+/environment.ts
 
 # System files
 .DS_Store
