--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "firebase": "^9.23.0",
+    "globe.gl": "^2.32.5",
     "rxjs": "~7.8.0",
+    "three": "^0.167.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -29,6 +31,7 @@
     "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/three": "^0.167.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
